--- a/statistics/narc_stats.ipynb
+++ b/statistics/narc_stats.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_path = \"annotations_jsonlines_bokmaal/aftenposten_02.jsonl\""
+    "sample_path = \"../output/narc/annotations_jsonlines_bokmaal/aftenposten_02.jsonl\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,25 +21,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 132 markables in ../output/narc/annotations_jsonlines_bokmaal/aftenposten_02.jsonl\n",
+      "Found 26 coreference clusters in ../output/narc/annotations_jsonlines_bokmaal/aftenposten_02.jsonl\n"
+     ]
+    }
+   ],
    "source": [
-    "m = {\"T1\": [[2, 2]], \"T2\": [[6, 7]], \"T3\": [[10, 10]], \"T4\": [[13, 13]], \"T5\": [[17, 19]], \"T6\": [[19, 19]], \"T7\": [[23, 23]], \"T8\": [[25, 26]], \"T9\": [[30, 30]], \"T10\": [[34, 34]], \"T11\": [[36, 36]], \"T12\": [[38, 38]], \"T13\": [[40, 48]], \"T14\": [[42, 48]], \"T15\": [[46, 48]], \"T16\": [[44, 44]], \"T17\": [[56, 57]], \"T18\": [[68, 70]], \"T19\": [[73, 74]], \"T21\": [[59, 60]], \"T22\": [[62, 63]], \"T23\": [[65, 66]], \"T24\": [[51, 51]], \"T25\": [[28, 28]], \"T26\": [[11, 11]], \"T20\": [[76, 78]], \"T28\": [[82, 86]], \"T29\": [[94, 94]], \"T30\": [[96, 97]], \"T31\": [[99, 103]], \"T35\": [[115, 118]], \"T36\": [[118, 118]], \"T37\": [[122, 123]], \"T38\": [[125, 128]], \"T41\": [[84, 86]], \"T42\": [[86, 86]], \"T43\": [[88, 90]], \"T44\": [[90, 90]], \"T45\": [[131, 134]], \"T47\": [[139, 139]], \"T49\": [[143, 145]], \"T48\": [[141, 145]], \"T50\": [[149, 151]], \"T51\": [[157, 161]], \"T52\": [[159, 159]], \"T53\": [[161, 161]], \"T54\": [[162, 162]], \"T56\": [[166, 166]], \"T57\": [[168, 168]], \"T58\": [[170, 172]], \"T61\": [[180, 183]], \"T63\": [[186, 196]], \"T64\": [[191, 196]], \"T67\": [[204, 207]], \"T68\": [[212, 212]], \"T70\": [[213, 222]], \"T71\": [[221, 222]], \"T72\": [[219, 219]], \"T73\": [[219, 222]], \"T74\": [[224, 225]], \"T75\": [[229, 231]], \"T76\": [[236, 238]], \"T77\": [[240, 240]], \"T78\": [[244, 250]], \"T79\": [[253, 257]], \"T81\": [[260, 260]], \"T82\": [[174, 174]], \"T83\": [[174, 183]], \"T60\": [[191, 191]], \"T84\": [[170, 171]], \"T59\": [[253, 253]], \"T85\": [[262, 262]], \"T86\": [[264, 272]], \"T87\": [[267, 272]], \"T88\": [[267, 268]], \"T90\": [[279, 280]], \"T91\": [[284, 284]], \"T92\": [[286, 291]], \"T93\": [[286, 286]], \"T96\": [[293, 293]], \"T97\": [[295, 295]], \"T98\": [[297, 297]], \"T99\": [[299, 299]], \"T100\": [[301, 305]], \"T101\": [[303, 305]], \"T102\": [[307, 308]], \"T103\": [[310, 313]], \"T104\": [[317, 317]], \"T105\": [[307, 307]], \"T106\": [[319, 320]], \"T107\": [[322, 324]], \"T108\": [[325, 325]], \"T109\": [[325, 328]], \"T110\": [[328, 328]], \"T111\": [[331, 331]], \"T112\": [[333, 334]], \"T113\": [[333, 333]], \"T114\": [[336, 336]], \"T115\": [[338, 340]], \"T116\": [[342, 343]], \"T117\": [[345, 346]], \"T118\": [[345, 345]], \"T40\": [[107, 107]], \"T55\": [[99, 99]], \"T66\": [[199, 207]], \"T33\": [[107, 118]], \"T119\": [[348, 350]], \"T120\": [[353, 353]], \"T121\": [[353, 354]], \"T122\": [[356, 358]], \"T123\": [[360, 360]], \"T124\": [[363, 366]], \"T125\": [[372, 374]], \"T127\": [[376, 378]], \"T128\": [[380, 383]], \"T130\": [[385, 385]], \"T131\": [[385, 386]], \"T132\": [[389, 390]], \"T133\": [[393, 393]], \"T135\": [[393, 405]], \"T136\": [[408, 410]], \"T137\": [[412, 415]], \"T140\": [[418, 418]], \"T141\": [[421, 422]], \"T142\": [[424, 429]], \"T143\": [[428, 429]], \"T144\": [[428, 428]], \"T145\": [[432, 434]], \"T146\": [[32, 32]], \"T32\": [[143, 143]], \"T34\": [[170, 170]], \"T27\": [[163, 163]]}"
+    "# load markables:\n",
+    "with jsonlines.open(sample_path) as reader:\n",
+    "    for obj in reader:\n",
+    "        m = obj[\"markables\"]\n",
+    "        c = obj[\"clusters\"]\n",
+    "        break\n",
+    "\n",
+    "print(f\"Found {len(m)} markables in {sample_path}\")\n",
+    "print(f\"Found {len(c)} coreference clusters in {sample_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "132"
+       "207"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,14 +79,14 @@
     "def flatten(l):\n",
     "    return [item for sublist in l for item in sublist]\n",
     "\n",
+    "# flattened markables - i.e., no grouped coreferences\n",
     "flat_vals = flatten(_m.values())\n",
-    "len(flat_vals)\n",
-    "len(m)"
+    "len(flat_vals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +95,7 @@
        "57"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,29 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "69"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c = [[[65, 81], [170, 172], [82, 85]], [[177, 193], [11, 25], [522, 546], [107, 131]], [[1363, 1366], [1311, 1395]], [[1517, 1554], [1614, 1621]], [[748, 775], [2053, 2066]], [[2104, 2129], [1061, 1132], [2161, 2164]], [[1488, 1499], [1427, 1448], [2034, 2045], [1736, 1747]], [[589, 600], [506, 546], [326, 328], [1299, 1310]], [[124, 131], [539, 546]], [[959, 970], [2705, 2712], [662, 669], [621, 628], [404, 429]], [[2213, 2216], [1565, 1599], [1640, 1654], [2176, 2199]], [[606, 617], [1986, 1997], [370, 381]], [[384, 400], [949, 955]], [[2072, 2080], [1179, 1187]], [[1179, 1224], [2072, 2090]], [[2138, 2156], [781, 810]], [[2455, 2458], [2372, 2410]], [[2506, 2509], [1106, 1132], [2475, 2490]], [[567, 578], [1838, 1849], [2645, 2656]], [[1894, 1905], [1967, 1977], [1752, 1796]], [[353, 367], [696, 720]], [[853, 857], [1024, 1028]], [[1024, 1038], [853, 869]], [[1873, 1891], [1799, 1810]], [[841, 869], [1024, 1053]], [[984, 987], [932, 970]]]\n",
-    "\n",
-    "len(flatten(c))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,11 +166,11 @@
        "defaultdict(int,\n",
        "            {'MiscStats-Entities': 92950,\n",
        "             'Stats-Mentions': 77575,\n",
-       "             'MiscStats-SplitAnte': 157,\n",
-       "             'MiscStats-Bridge': 1060})"
+       "             'MiscStats-Bridge': 1060,\n",
+       "             'MiscStats-SplitAnte': 157})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,13 +190,12 @@
     "            stats = update_stats(stats, data)\n",
     "    return stats\n",
     "\n",
-    "# get_stats(\"annotations_jsonlines_bokmaal\")\n",
-    "get_stats(\"../../output/narc/annotations_jsonlines_bokmaal/\")"
+    "get_stats(\"../output/narc/annotations_jsonlines_bokmaal/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,22 +208,14 @@
        "             'MiscStats-SplitAnte': 88})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# get_stats(\"annotations_jsonlines_nynorsk\")\n",
-    "get_stats(\"../../output/narc/annotations_jsonlines_nynorsk/\")"
+    "get_stats(\"../output/narc/annotations_jsonlines_nynorsk/\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -241,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bokmaal 16531 259026\n",
+      "bokmaal 16461 257646\n",
       "nynorsk 12762 213222\n"
      ]
     }
@@ -258,13 +244,13 @@
     "import os\n",
     "\n",
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
-    "    path = \"annotations_conll_\" + lang\n",
+    "    path = \"../output/narc/annotations_conll_\" + lang\n",
     "    sents = 0\n",
     "    tokens = 0\n",
     "    for conll in os.listdir(path):\n",
     "        if \"conll\" not in conll:\n",
     "            continue\n",
-    "        with open(os.path.join(path, conll)) as f:\n",
+    "        with open(os.path.join(path, conll), encoding=\"utf-8\") as f:\n",
     "            data = f.read()\n",
     "            parsed = parse(data)\n",
     "            sents += len(parsed)\n",
@@ -274,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,13 +277,13 @@
     "import os\n",
     "\n",
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
-    "    path = \"../../UD/UD_Norwegian-\" + lang.capitalize()\n",
+    "    path = \"../data/UD/UD_Norwegian-\" + lang.capitalize()\n",
     "    sents = 0\n",
     "    tokens = 0\n",
     "    for conll in os.listdir(path):\n",
     "        if \"conll\" not in conll:\n",
     "            continue\n",
-    "        with open(os.path.join(path, conll)) as f:\n",
+    "        with open(os.path.join(path, conll), encoding=\"utf-8\") as f:\n",
     "            data = f.read()\n",
     "            parsed = parse(data)\n",
     "            sents += len(parsed)\n",
@@ -322,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
