--- a/statistics/stats.ipynb
+++ b/statistics/stats.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "    for doc_count, conll in enumerate(os.listdir(path)):\n",
     "        if not conll.endswith(\".conllu\"):\n",
     "            continue\n",
-    "        parsed = parse(open(os.path.join(path, conll)).read())\n",
+    "        parsed = parse(open(os.path.join(path, conll), encoding=\"utf-8\").read())\n",
     "        for sentence in parsed:\n",
     "            total_sents += 1\n",
     "            for token in sentence:\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    ../../output/narc/annotations_conll_bokmaal\n",
+      "    ../output/narc/annotations_conll_bokmaal\n",
       "    16461 sentences, \n",
       "    257646 tokens, \n",
       "    15.651904501549117 tokens/sent, \n",
@@ -156,7 +156,7 @@
       "    5073 unique entities\n",
       "    \n",
       "\n",
-      "    ../../output/narc/annotations_conll_nynorsk\n",
+      "    ../output/narc/annotations_conll_nynorsk\n",
       "    12762 sentences, \n",
       "    213222 tokens, \n",
       "    16.707569346497415 tokens/sent, \n",
@@ -173,7 +173,7 @@
    ],
    "source": [
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
-    "    path = f\"../../output/narc/annotations_conll_{lang}\"\n",
+    "    path = f\"../output/narc/annotations_conll_{lang}\"\n",
     "    # path = f\"../../output/narc/{lang}\"\n",
     "    # path = f\"narc-merged/OUTPUT/no-narc_{lang}\"\n",
     "    get_lang_stats(path)"
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    ../../output/aligned/no-narc_bokmaal\n",
+      "    ../output/aligned/no-narc_bokmaal\n",
       "    15672 sentences, \n",
       "    244136 tokens, \n",
       "    15.57784583971414 tokens/sent, \n",
@@ -210,7 +210,7 @@
       "    4934 unique entities\n",
       "    \n",
       "\n",
-      "    ../../output/aligned/no-narc_nynorsk\n",
+      "    ../output/aligned/no-narc_nynorsk\n",
       "    12481 sentences, \n",
       "    206660 tokens, \n",
       "    16.557968111529526 tokens/sent, \n",
@@ -227,13 +227,13 @@
    ],
    "source": [
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
-    "    path = f\"../../output/aligned/no-narc_{lang}\"\n",
+    "    path = f\"../output/aligned/no-narc_{lang}\"\n",
     "    get_lang_stats(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    ../../data/UD/UD_Norwegian-Bokmaal\n",
+      "    ../data/UD/UD_Norwegian-Bokmaal\n",
       "    20044 sentences, \n",
       "    310221 tokens, \n",
       "    15.477000598682897 tokens/sent, \n",
@@ -254,7 +254,7 @@
       "    0 unique entities\n",
       "    \n",
       "\n",
-      "    ../../data/UD/UD_Norwegian-Nynorsk\n",
+      "    ../data/UD/UD_Norwegian-Nynorsk\n",
       "    17575 sentences, \n",
       "    301353 tokens, \n",
       "    17.14668563300142 tokens/sent, \n",
@@ -272,7 +272,7 @@
    "source": [
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
     "    _ud = f\"UD_Norwegian-{lang.capitalize()}\"\n",
-    "    ud_path = f\"../../data/UD/{_ud}\"\n",
+    "    ud_path = f\"../data/UD/{_ud}\"\n",
     "    get_lang_stats(ud_path)"
    ]
   },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    ../../data/norne/ud/nob\n",
+      "    ../data/norne/ud/nob\n",
       "    20045 sentences, \n",
       "    310222 tokens, \n",
       "    15.476278373659266 tokens/sent, \n",
@@ -307,7 +307,7 @@
       "    0 unique entities\n",
       "    \n",
       "\n",
-      "    ../../data/norne/ud/nno\n",
+      "    ../data/norne/ud/nno\n",
       "    17575 sentences, \n",
       "    301353 tokens, \n",
       "    17.14668563300142 tokens/sent, \n",
@@ -325,7 +325,7 @@
    "source": [
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
     "    _id = \"nno\" if lang == \"nynorsk\" else \"nob\"\n",
-    "    path = f\"../../data/norne/ud/{_id}\"\n",
+    "    path = f\"../data/norne/ud/{_id}\"\n",
     "    get_lang_stats(path)"
    ]
   }
@@ -346,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
