Update requirements and stats

--- a/statistics/udapi_stats.ipynb
+++ b/statistics/udapi_stats.ipynb
@@ -5,31 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Udapi stats\n",
-    "Make sure to modify the \"make_conllu_line\" in the parsing of NARC files as follows:\n",
-    "\n",
-    "```\n",
-    "    conllu_dict = {\n",
-    "        \"ID\": str(token_id + 1),\n",
-    "        \"FORM\": token,\n",
-    "        \"LEMMA\": token,\n",
-    "        \"UPOS\": \"VERB\",\n",
-    "        \"XPOS\": \"_\",\n",
-    "        \"FEATS\": \"_\",\n",
-    "        \"HEAD\": \"0\",\n",
-    "        \"DEPREL\": \"root\" if token_id == 2 else \"nsubj\",\n",
-    "        \"DEPS\": \"_\",\n",
-    "        \"MISC\": misc\n",
-    "    }\n",
-    "\n",
-    "```\n",
-    "\n",
-    "this is to bypass parsing with udapi"
+    "# Udapi stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +32,7 @@
        "             'Bridge[MiscStats]': 2})"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +56,7 @@
     "            counts[attr + \"[MiscStats]\"] += 1\n",
     "    return counts\n",
     "\n",
-    "f = \"/Users/tollef/Downloads/git/PHD/COREF/UD-NARC/output/narc/annotations_conll_bokmaal/aftenposten_01.conllu\"\n",
+    "f = \"../output/narc/annotations_conll_bokmaal/aftenposten_01.conllu\"\n",
     "process_file(f)"
    ]
   },
@@ -89,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,9 +85,11 @@
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
     "    path = \"annotations_conll_\" + lang\n",
-    "    path = f\"/Users/tollef/Downloads/git/PHD/COREF/UD-NARC/output/narc/annotations_conll_{lang}\"\n",
+    "    path = f\"../output/narc/annotations_conll_{lang}\"\n",
     "    stats = defaultdict(int)\n",
     "    for conll_f in os.listdir(path):\n",
     "        if conll_f.endswith(\".conllu\"):\n",
@@ -127,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,19 +120,14 @@
       "bokmaal\n",
       "defaultdict(<class 'int'>, {'entities[Stats]': 52815, 'mentions[Stats]': 73983, 'Entity[MiscStats]': 88291, 'SpaceAfter[MiscStats]': 27055, 'name[MiscStats]': 16168, 'Bridge[MiscStats]': 1025, 'SplitAnte[MiscStats]': 134})\n",
       "nynorsk\n",
-      "defaultdict(<class 'int'>, {'entities[Stats]': 44847, 'mentions[Stats]': 61615, 'Entity[MiscStats]': 74145, 'SpaceAfter[MiscStats]': 21336, 'name[MiscStats]': 15520, 'Bridge[MiscStats]': 841, 'SplitAnte[MiscStats]': 80})\n"
+      "defaultdict(<class 'int'>, {'entities[Stats]': 44847, 'mentions[Stats]': 61615, 'Entity[MiscStats]': 74145, 'name[MiscStats]': 15520, 'SpaceAfter[MiscStats]': 21339, 'Bridge[MiscStats]': 841, 'SplitAnte[MiscStats]': 80})\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
-    "    # path = f\"../../output/narc/\"\n",
-    "    path = f\"/Users/tollef/Downloads/git/PHD/COREF/UD-NARC/output/aligned/no-narc_{lang}\"\n",
-    "    path = f\"/Users/tollef/Downloads/git/PHD/COREF/UD-NARC/output/aligned/no-narc_{lang}\"\n",
-    "    # path = f\"/Users/tollef/Downloads/git/PHD/COREF/CRAC-23/modeling/data/CorefUD_Norwegian-BokmaalNARC\"\n",
-    "    # _id = \"nob\" if lang == \"bokmaal\" else \"nno\"\n",
-    "    # path = f\"/Users/tollef/Downloads/git/PHD/COREF/UD-NARC/data/norne/ud/{_id}\"\n",
+    "    path = f\"../output/aligned/no-narc_{lang}\"\n",
     "    stats = defaultdict(int)\n",
     "    for conll_f in os.listdir(path):\n",
     "        if conll_f.endswith(\".conllu\"):\n",
@@ -177,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
